--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,24 @@
+attrs==21.4.0
+bandit==1.7.4
+Faker==13.3.4
+flake8==4.0.1
+gitdb==4.0.9
+GitPython==3.1.27
 greenlet==1.1.2
+iniconfig==1.1.1
+mccabe==0.6.1
+packaging==21.3
+pbr==5.8.1
+pluggy==1.0.0
+py==1.11.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pyparsing==3.0.7
+pytest==7.1.1
+python-dateutil==2.8.2
+PyYAML==6.0
+six==1.16.0
+smmap==5.0.0
 SQLAlchemy==1.4.34
+stevedore==3.5.0
+tomli==2.0.1
